day3/mainDeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-nginx
  labels:
     app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-app
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports: 
        - containerPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector: 
    app: nginx
  ports:
  - name: nginx-port
    port: 80
    targetPort: 80
