day3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: nginx
    annotations:
      ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingres
  annotations:
  #  nginx.org/client-max-body-size: "1024m"
  #  nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx
  rules:
  - host: "matomi.sandbox.aws.teamwork.net"
    http:
        paths: 
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: apache-eml-service
              port:
                number: 80
  tls: 
    - hosts:
      - matomi.sandbox.aws.teamwork.net
      secretName: eml-cert
